--- a/resources/scss/base.scss
+++ b/resources/scss/base.scss
@@ -3,6 +3,7 @@
     --main-white: #ffffff;
     --main-gray: #d9d9d9;
     --main-red: red;
+    --main-green: rgb(11, 201, 11);
     --background-form: #ffffffcc;
     --background-btn-primary: #007BFF;
     --background-header: #00000078;
