--- a/resources/scss/auth.scss
+++ b/resources/scss/auth.scss
@@ -1,7 +1,7 @@
 .app-auth {
     width: 100%;
     height: 100vh;
-    @include css-background-img("../img/Background_authentication.jpg");
+    @include css-background-img("../image/Background_authentication.jpg");
     @include flex-center;
 
     .box-form {
@@ -14,21 +14,22 @@
         .banner {
             width: 50%;
             height: 100%;
-            @include css-background-img("../img/Banner_authentication.jpg");
+            @include css-background-img("../image/Banner_authentication.jpg");
             @include flex-center;
             flex-direction: column;
 
             img {
-                width: 111px;
-                height: 111px;
+                width: 200px;
+                height: 200px;
                 border-radius: 50%;
             }
 
             h2 {
                 @include text-setting(30px, 800, 55px);
+                margin: 0px auto;
                 text-align: center;
                 color: var(--main-white);
-                margin: 10px 0 0;
+                line-height: 50px;
             }
         }
 
@@ -41,14 +42,19 @@
             h3 {
                 @include text-setting(35px, 700);
                 text-align: center;
-                margin: 10px auto 0;
+                margin: 20px auto 0;
             }
 
             .item-form {
                 margin-top: 30px;
-                p {
-                    @include text-setting(18px, 600);
-                    margin: 0 0 10px;
+
+                &.text-link {
+                    text-align: center
+                }
+
+                a {
+                    @include text-setting(15px);
+                    color: var(--text-link-blue);
                 }
 
                 input {
@@ -66,13 +72,17 @@
                     }
                 }
 
-                span {
-                    font-size: 14px;
+                .notify-error {
                     color: var(--main-red);
+                    font-size: 0.9rem;
+                }
+
+                .notify-success {
+                    color: var(--main-green);
                 }
 
                 p:last-child {
-                    text-align: center;
+                    text-align: end;
                     @include text-setting(15px, 400, var(--text-link-blue));
                     cursor: pointer;
                 }
@@ -101,29 +111,57 @@
                         }
                     }
                 }
-
-                &.item-password {
-                    position: relative;
-                    .icon-eyes {
-                        position: absolute;
-                        top: 58%;
-                        right: 20px;
-                        color: var(--border-gray);
-                    }
-                }
             }
 
-            &.login {
+            .notify-error {
+                color: var(--main-red);
+                font-size: 0.9rem;
+            }
+
+            &.register {
+                padding: 15px 50px;
+
                 .item-form {
-                    .text-forgot-password {
-                        margin: 15px 0 0;
-                        text-align: end;
-                        @include text-setting(15px, 400, var(--text-link-blue));
+                    margin-top: 15px;
+
+                    p {
+                        margin: 3px 0px;
                     }
 
-                    &.item-password {
-                        .icon-eyes {
-                            top: 42%;
+                    input {
+                        width: 100%;
+                        height: 40px;
+                        padding: 5px 25px;
+                    }
+
+                    &::placeholder {
+                        @include text-setting(15px, 400);
+                    }
+
+                    &.item-avatar {
+                        display: flex;
+                        align-items: center;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+
+                        #choose-avatar-button {
+                            max-width: 339px;
+                            height: 35px;
+                            margin-left: 10px;
+                            padding: 0px 20px;
+                            border-radius: 6px;
+                            @include text-setting(15px, 400);
+                            line-height: 32px;
+                            border: 1px solid var(--border-gray);
+                            background-color: var(--main-white);
+                        }
+
+                        input {
+                            width: 330px;
+                            height: 35px;
+                            padding-left: 20px;
+                            background-color: var(--main-white);
                         }
                     }
                 }
