--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -4,4 +4,6 @@
 @import './header.scss';
 @import './footer.scss';
 @import './auth.scss';
-@import './blog.scss';
+@import './create_update_blog.scss';
+@import './detail_blog.scss';
+@import './profile.scss';
