--- a/resources/scss/auth.scss
+++ b/resources/scss/auth.scss
@@ -145,7 +145,7 @@
                         overflow: hidden;
                         text-overflow: ellipsis;
 
-                        #choose-avatar-button {
+                        .choose-avatar {
                             max-width: 339px;
                             height: 35px;
                             margin-left: 10px;
