--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -1,4 +1,4 @@
-img {
+.image-main-home {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -10,7 +10,8 @@ img {
     margin: 72.5px 101px 96px;
 
     .title {
-        @include align-items-center;
+        display: flex;
+        align-items: center;
         justify-content: space-between;
         width: 100%;
         margin-bottom: 38px;
@@ -68,10 +69,12 @@ img {
                 .info {
                     height: 31px;
                     margin: 0 0 15px 0;
-                    @include align-items-center;
+                    display: flex;
+                    align-items: center;
 
                     .author {
-                        @include align-items-center;
+                        display: flex;
+                        align-items: center;
 
                         img {
                             width: 24px;
@@ -89,12 +92,13 @@ img {
                     }
 
                     .time {
-                        @include align-items-center;
+                        display: flex;
+                        align-items: center;
 
                         img {
                             width: 24px;
                             height: 24px;
-                            margin: 0 8px 0 21px;
+                            margin: 0 8px 0 60px;
                             border-radius: 50%;
                         }
 
@@ -126,7 +130,8 @@ img {
 
                 .text-link {
                     button {
-                        @include align-items-center;
+                        display: flex;
+                        align-items: center;
                         width: 137px;
                         height: 40px;
                         font-family: "SVN-Gilroy";
@@ -164,6 +169,9 @@ img {
             }
         }
     }
+    .paginate {
+        @include paginate;
+    }
 }
 
 .notify-create-blog-success {
@@ -177,7 +185,7 @@ img {
     position: absolute;
     top: 115px;
     right: 1px;
-    animation: fadeOut linear 1s 8s forwards;
+    animation: fadeOut linear 10s 2s forwards;
 
     .notify-icon {
         i {
@@ -226,7 +234,105 @@ img {
     position: absolute;
     top: 115px;
     right: 1px;
-    animation: fadeOut linear 1s 8s forwards;
+    animation: fadeOut linear 10s 2s forwards;
+
+    .notify-icon {
+        i {
+            color: var(--main-red);
+            font-size: 24px;
+            padding-right: 15px;
+        }
+    }
+
+    .notify-body {
+        h3 {
+            margin: 15px 0px 5px 0px;
+        }
+
+        p {
+            font-size: 0.8rem;
+            font-weight: 600;
+            color: var(--text-title-gray);
+            margin: 5px 0px 15px 0px;
+        }
+    }
+
+    .notify-close {
+        i {
+            font-size: 20px;
+            font-weight: 700;
+            padding-left: 15px;
+            color: var(--border-gray);
+            cursor: pointer;
+
+            &:hover {
+                color: var(--main-black);
+            }
+        }
+    }
+}
+
+.notify-delete-blog-success {
+    display: flex;
+    align-items: center;
+    background-color: var(--main-white);
+    border-radius: 4px;
+    padding: 0px 15px;
+    border-left: 4px solid var(--main-green);
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.08);
+    position: absolute;
+    top: 115px;
+    right: 1px;
+    animation: fadeOut linear 10s 2s forwards;
+
+    .notify-icon {
+        i {
+            color: var(--main-green);
+            font-size: 24px;
+            padding-right: 15px;
+        }
+    }
+
+    .notify-body {
+        h3 {
+            margin: 15px 0px 5px 0px;
+        }
+
+        p {
+            font-size: 0.8rem;
+            font-weight: 600;
+            color: var(--text-title-gray);
+            margin: 5px 0px 15px 0px;
+        }
+    }
+
+    .notify-close {
+        i {
+            font-size: 20px;
+            font-weight: 700;
+            padding-left: 15px;
+            color: var(--border-gray);
+            cursor: pointer;
+
+            &:hover {
+                color: var(--main-black);
+            }
+        }
+    }
+}
+
+.notify-delete-blog-error {
+    display: flex;
+    align-items: center;
+    background-color: var(--main-white);
+    border-radius: 4px;
+    padding: 0px 15px;
+    border-left: 4px solid var(--main-red);
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.08);
+    position: absolute;
+    top: 115px;
+    right: 1px;
+    animation: fadeOut linear 10s 2s forwards;
 
     .notify-icon {
         i {
